# fast-matrix-multiplication

./: .clang-format  .gitignore  collect_stats.cpp  meson.build
src/core/: dynamic_bitset.h  matrix.h  mm.h  poly.h  poly_matix_utils.h  tensor.h
src/multipliers/: multiplier_bilinear_aggregation.h  multiplier_bitpacking.h  multiplier_four_russians.h  multiplier_naive.h  multiplier_shoenhage_simple.h  multiplier_strassen.h  multiplier_tensors.h
src/utils/: operations_counter.h  tensor_decompositions.h
tests/: test_bilinear_aggregation.cpp  test_bitpacking.cpp  test_four_russians.cpp  test_naive.cpp  test_shoenhage_simple.cpp  test_strassen.cpp  test_tensors.cpp
